Fixed e2e and implemented code review comment suggestions